cloud/k8s/backstage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: backstage
  labels:
    app: backstage
    backstage.io/kubernetes-id: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
        backstage.io/kubernetes-id: backstage
    spec:
      serviceAccountName: backstage
      # Uncomment once we confirm Backstage runs fine under gVisor.
      # runtimeClassName: gvisor
      containers:
        - name: backstage
          image: ghcr.io/neongreen/backstage:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 7007
          volumeMounts:
            - name: config
              mountPath: /app/app-config.production.yaml
              subPath: app-config.production.yaml
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      imagePullSecrets:
        - name: ghcr-creds
      volumes:
        - name: config
          configMap:
            name: backstage-config
