cloud/k8s/backstage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage
  namespace: backstage
  labels:
    app: backstage
    backstage.io/kubernetes-id: backstage
spec:
  selector:
    app: backstage
  ports:
    - name: http
      port: 80
      targetPort: 7007
      protocol: TCP
  type: ClusterIP
